test/grammar/schema/union/binary_union/bin_union_fail_4/stderr.golden
error[E2L23]: CompileError
  --> ${CWD}/main.k:10:5
   |
10 |     err: "123"
   |     ^ Cannot add member 'err' to schema 'Person'
   |